refactor: Add initial application support * Use ink-gradient and ink-big-text to show application logo * Add support to show data from WeatherData topic

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "linux"
   ],
   "dependencies": {
+    "@exhumer/ink-gradient": "^3.5.0",
     "commander": "^10.0.1",
     "ink": "^4.2.0",
     "ink-big-text": "^2.0.0",
